@@ -20,14 +20,14 @@ import com.fongmi.android.tv.bean.Sub;
 import com.fongmi.android.tv.bean.Track;
 import com.fongmi.android.tv.databinding.DialogTrackBinding;
 import com.fongmi.android.tv.player.Players;
-import com.fongmi.android.tv.player.TrackNameProvider;
+import com.fongmi.android.tv.player.custom.TrackNameProvider;
 import com.fongmi.android.tv.ui.adapter.TrackAdapter;
 import com.fongmi.android.tv.ui.custom.SpaceItemDecoration;
 import com.fongmi.android.tv.utils.FileChooser;
 import com.fongmi.android.tv.utils.ResUtil;
 import com.google.android.material.bottomsheet.BottomSheetDialogFragment;
-
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 import tv.danmaku.ijk.media.player.misc.ITrackInfo;
@@ -37,9 +37,10 @@ public final class TrackDialog extends BaseDialog implements TrackAdapter.OnClic
     private final TrackNameProvider provider;
     private final TrackAdapter adapter;
     private DialogTrackBinding binding;
-    private FragmentActivity activity;
     private Listener listener;
+    private ChooserListener cListener;
     private Players player;
+    private boolean vod;
     private int type;
 
     public static TrackDialog create() {
@@ -51,8 +52,8 @@ public final class TrackDialog extends BaseDialog implements TrackAdapter.OnClic
         this.provider = new TrackNameProvider();
     }
 
-    public TrackDialog type(int type) {
-        this.type = type;
+    public TrackDialog chooser(ChooserListener listener) {
+        this.cListener = listener;
         return this;
     }
 
@@ -61,11 +62,20 @@ public final class TrackDialog extends BaseDialog implements TrackAdapter.OnClic
         return this;
     }
 
+    public TrackDialog vod(boolean vod) {
+        this.vod = vod;
+        return this;
+    }
+
+    public TrackDialog type(int type) {
+        this.type = type;
+        return this;
+    }
+
     public void show(FragmentActivity activity) {
         for (Fragment f : activity.getSupportFragmentManager().getFragments()) if (f instanceof BottomSheetDialogFragment) return;
         show(activity.getSupportFragmentManager(), null);
         this.listener = (Listener) activity;
-        this.activity = activity;
     }
 
     @Override
@@ -80,24 +90,25 @@ public final class TrackDialog extends BaseDialog implements TrackAdapter.OnClic
         binding.recycler.addItemDecoration(new SpaceItemDecoration(1, 16));
         binding.recycler.post(() -> binding.recycler.scrollToPosition(adapter.getSelected()));
         binding.recycler.setVisibility(adapter.getItemCount() == 0 ? View.GONE : View.VISIBLE);
-        binding.choose.setVisibility(type == C.TRACK_TYPE_TEXT && player.isExo() ? View.VISIBLE : View.GONE);
-        binding.size.setVisibility(type == C.TRACK_TYPE_TEXT ? View.VISIBLE : View.GONE);
+        binding.choose.setVisibility(type == C.TRACK_TYPE_TEXT && player.isExo() && vod ? View.VISIBLE : View.GONE);
+        binding.subtitle.setVisibility(type == C.TRACK_TYPE_TEXT ? View.VISIBLE : View.GONE);
         binding.title.setText(ResUtil.getStringArray(R.array.select_track)[type - 1]);
     }
 
     @Override
     protected void initEvent() {
-        binding.size.setOnClickListener(this::showSubtitle);
         binding.choose.setOnClickListener(this::showChooser);
+        binding.subtitle.setOnClickListener(this::onSubtitle);
     }
 
-    private void showSubtitle(View view) {
-        SubtitleDialog.create(activity).listen(true).show();
+    private void onSubtitle(View view) {
+        listener.onSubtitleClick();
         dismiss();
     }
 
     private void showChooser(View view) {
-        FileChooser.from(this).show(new String[]{MimeTypes.APPLICATION_SUBRIP, MimeTypes.TEXT_SSA, MimeTypes.TEXT_VTT, MimeTypes.APPLICATION_TTML, "text/*", "application/octet-stream"});
+        if (cListener != null) cListener.showChooser(this);
+        else FileChooser.from(this).show(new String[]{MimeTypes.APPLICATION_SUBRIP, MimeTypes.TEXT_SSA, MimeTypes.TEXT_VTT, MimeTypes.APPLICATION_TTML, "text/*", "application/octet-stream"});
         player.pause();
     }
 
@@ -142,7 +153,7 @@ public final class TrackDialog extends BaseDialog implements TrackAdapter.OnClic
     @Override
     public void onItemClick(Track item) {
         if (listener != null) listener.onTrackClick(item);
-        player.setTrack(List.of(item));
+        player.setTrack(Arrays.asList(item));
         if (item.isAdaptive()) return;
         dismiss();
     }
@@ -158,5 +169,12 @@ public final class TrackDialog extends BaseDialog implements TrackAdapter.OnClic
     public interface Listener {
 
         void onTrackClick(Track item);
+
+        void onSubtitleClick();
+    }
+
+    public interface ChooserListener {
+
+        void showChooser(TrackDialog dialog);
     }
 }
